RIA-6817 - add fortify scan on nightly build