@@ -122,6 +122,12 @@ task smoke(type: Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 100000
   toolVersion = '8.40'
@@ -271,6 +277,9 @@ dependencies {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
+
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '2.2.12'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
